--- a/product9.html
+++ b/product9.html
@@ -50,11 +50,11 @@
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
-    <p class="product-article">Артикул: 12345</p>
+    <p class="product-article">Артикул: 99999</p>
 </div>
 
 <!-- Кнопка "Купить" -->
-<button class="price-btn">Купить: 7500 руб.</button>
+<button class="price-btn">Купить: 990 руб.</button>
 
 <!-- Секция "Смотрите также" -->
 <div class="see-also">
@@ -63,32 +63,32 @@
     <div class="catalog-container">
         <!-- Товар 1 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product1.html" class="product-link">
-                <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
-                <h3>Футбольные бутсы Adidas Predator</h3>
+            <a href="product10.html" class="product-link">
+                <img src="Zenit-Hoodie 1.jpg" alt="Футбольные бутсы" class="product-img">
+                <h3>Худи Zenit&PlayersClub</h3>
             </a>
-            <p class="product-article">Артикул: 12345</p>
-            <p class="product-price">7500 руб.</p>
+            <p class="product-article">Артикул: 73582</p>
+            <p class="product-price">12990 руб.</p>
         </div>
 
         <!-- Товар 2 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product2.html" class="product-link">
-                <img src="photoset.jpg" alt="Экипировка" class="product-img">
-                <h3>Футболка Nike</h3>
+            <a href="product12.html" class="product-link">
+                <img src="Players Club T-short.png" alt="Экипировка" class="product-img">
+                <h3>T-Shot PlayersClub</h3>
             </a>
-            <p class="product-article">Артикул: 67890</p>
-            <p class="product-price">3500 руб.</p>
+            <p class="product-article">Артикул: 52525</p>
+            <p class="product-price">3990 руб.</p>
         </div>
 
         <!-- Товар 3 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product3.html" class="product-link">
-                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
-                <h3>Конусы тренировочные</h3>
+            <a href="product5.html" class="product-link">
+                <img src="Манижки.png" alt="Инвентарь" class="product-img">
+                <h3>Манишка двусторонняя синяя-зелёная</h3>
             </a>
-            <p class="product-article">Артикул: 11223</p>
-            <p class="product-price">2000 руб.</p>
+            <p class="product-article">Артикул: 55555</p>
+            <p class="product-price">990 руб.</p>
         </div>
     </div>
 </div>
