--- a/product4.html
+++ b/product4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
+    <title>Манишка сетчатая оранжевая</title>
     <link rel="stylesheet" href="style52.css">
     <link rel="stylesheet" href="products.css">
 </head>
@@ -48,11 +48,11 @@
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
-    <p class="product-article">Артикул: 12345</p>
+    <p class="product-article">Артикул: 44444</p>
 </div>
 
 <!-- Кнопка "Купить" -->
-<button class="price-btn">Купить: 7500 руб.</button>
+<button class="price-btn">Купить: 990 руб.</button>
 
 <!-- Секция "Смотрите также" -->
 <div class="see-also">
@@ -62,31 +62,31 @@
         <!-- Товар 1 в секции "Смотрите также" -->
         <div class="catalog-item">
             <a href="product1.html" class="product-link">
-                <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
-                <h3>Футбольные бутсы Adidas Predator</h3>
+                <img src="NIke Tiempo 1.png" alt="Футбольные бутсы" class="product-img">
+                <h3>NIKE LEGEND 9 ELITE FG CZ8482-176</h3>
             </a>
-            <p class="product-article">Артикул: 12345</p>
-            <p class="product-price">7500 руб.</p>
+            <p class="product-article">Артикул: 11111</p>
+            <p class="product-price">43990 руб.</p>
         </div>
 
         <!-- Товар 2 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product2.html" class="product-link">
-                <img src="photoset.jpg" alt="Экипировка" class="product-img">
-                <h3>Футболка Nike</h3>
+            <a href="product5.html" class="product-link">
+                <img src="Манижки.png" alt="Экипировка" class="product-img">
+                <h3>Манишка двусторонняя синяя-зелёная</h3>
             </a>
-            <p class="product-article">Артикул: 67890</p>
-            <p class="product-price">3500 руб.</p>
+            <p class="product-article">Артикул: 55555</p>
+            <p class="product-price">990 руб.</p>
         </div>
 
         <!-- Товар 3 в секции "Смотрите также" -->
         <div class="catalog-item">
             <a href="product3.html" class="product-link">
-                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
-                <h3>Конусы тренировочные</h3>
+                <img src="mizuno1.jpg" alt="Инвентарь" class="product-img">
+                <h3>Mizuno Morelia Neo Beta Japan FG</h3>
             </a>
-            <p class="product-article">Артикул: 11223</p>
-            <p class="product-price">2000 руб.</p>
+            <p class="product-article">Артикул: 33333</p>
+            <p class="product-price">18990 руб.</p>
         </div>
     </div>
 </div>
