--- a/product8.html
+++ b/product8.html
@@ -52,11 +52,11 @@
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
-    <p class="product-article">Артикул: 12345</p>
+    <p class="product-article">Артикул: 88888</p>
 </div>
 
 <!-- Кнопка "Купить" -->
-<button class="price-btn">Купить: 7500 руб.</button>
+<button class="price-btn">Купить: 1990 руб.</button>
 
 <!-- Секция "Смотрите также" -->
 <div class="see-also">
@@ -65,32 +65,32 @@
     <div class="catalog-container">
         <!-- Товар 1 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product1.html" class="product-link">
-                <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
-                <h3>Футбольные бутсы Adidas Predator</h3>
+            <a href="product6.html" class="product-link">
+                <img src="gaiters.png" alt="Футбольные бутсы" class="product-img">
+                <h3>Гетры спортивные JOGEL чёрные</h3>
             </a>
-            <p class="product-article">Артикул: 12345</p>
-            <p class="product-price">7500 руб.</p>
+            <p class="product-article">Артикул: 66666</p>
+            <p class="product-price">590 руб.</p>
         </div>
 
         <!-- Товар 2 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product2.html" class="product-link">
-                <img src="photoset.jpg" alt="Экипировка" class="product-img">
-                <h3>Футболка Nike</h3>
+            <a href="product9.html" class="product-link">
+                <img src="cones1.png" alt="Экипировка" class="product-img">
+                <h3>Набор конусов 10 штук</h3>
             </a>
-            <p class="product-article">Артикул: 67890</p>
-            <p class="product-price">3500 руб.</p>
+            <p class="product-article">Артикул: 99999</p>
+            <p class="product-price">990 руб.</p>
         </div>
 
         <!-- Товар 3 в секции "Смотрите также" -->
         <div class="catalog-item">
             <a href="product3.html" class="product-link">
-                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
-                <h3>Конусы тренировочные</h3>
+                <img src="mizuno1.jpg" alt="Инвентарь" class="product-img">
+                <h3>Mizuno Morelia Neo Beta Japan FG</h3>
             </a>
-            <p class="product-article">Артикул: 11223</p>
-            <p class="product-price">2000 руб.</p>
+            <p class="product-article">Артикул: 33333</p>
+            <p class="product-price">18990 руб.</p>
         </div>
     </div>
 </div>
