--- a/product11.html
+++ b/product11.html
@@ -65,30 +65,30 @@
         <div class="catalog-item">
             <a href="product2.html" class="product-link">
                 <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
-                <h3>Футбольные бутсы Adidas Predator</h3>
+                <h3>ULTRA 5 ULTIMATE MxSG Football Boots</h3>
             </a>
-            <p class="product-article">Артикул: 12345</p>
-            <p class="product-price">7500 руб.</p>
+            <p class="product-article">Артикул: 22222</p>
+            <p class="product-price">23990 руб.</p>
         </div>
 
         <!-- Товар 2 в секции "Смотрите также" -->
         <div class="catalog-item">
             <a href="product6.html" class="product-link">
-                <img src="photoset.jpg" alt="Экипировка" class="product-img">
-                <h3>T-Short PlayersClub</h3>
+                <img src="gaiters.png" alt="Экипировка" class="product-img">
+                <h3>Гетры спортивные JOGEL чёрные</h3>
             </a>
-            <p class="product-article">Артикул: 67890</p>
-            <p class="product-price">3500 руб.</p>
+            <p class="product-article">Артикул: 66666</p>
+            <p class="product-price">590 руб.</p>
         </div>
 
         <!-- Товар 3 в секции "Смотрите также" -->
         <div class="catalog-item">
             <a href="product7.html" class="product-link">
-                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
-                <h3>Конусы тренировочные</h3>
+                <img src="RIdFFsXyzeV.jpg" alt="Инвентарь" class="product-img">
+                <h3>Лестница координационная</h3>
             </a>
-            <p class="product-article">Артикул: 11223</p>
-            <p class="product-price">2000 руб.</p>
+            <p class="product-article">Артикул: 77777</p>
+            <p class="product-price">990 руб.</p>
         </div>
     </div>
 </div>
