--- a/product12.html
+++ b/product12.html
@@ -61,32 +61,32 @@
     <div class="catalog-container">
         <!-- Товар 1 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product2.html" class="product-link">
-                <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
-                <h3>Футбольные бутсы Adidas Predator</h3>
+            <a href="product3.html" class="product-link">
+                <img src="mizuno1.jpg" alt="Футбольные бутсы" class="product-img">
+                <h3>Mizuno Morelia Neo Beta Japan FGr</h3>
             </a>
-            <p class="product-article">Артикул: 12345</p>
-            <p class="product-price">7500 руб.</p>
+            <p class="product-article">Артикул: 33333</p>
+            <p class="product-price">18990 руб.</p>
         </div>
 
         <!-- Товар 2 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product6.html" class="product-link">
-                <img src="photoset.jpg" alt="Экипировка" class="product-img">
-                <h3>T-Short PlayersClub</h3>
+            <a href="product8.html" class="product-link">
+                <img src="stenka1.png" alt="Экипировка" class="product-img">
+                <h3>Стенка тренировочная из полиуретана</h3>
             </a>
-            <p class="product-article">Артикул: 67890</p>
-            <p class="product-price">3500 руб.</p>
+            <p class="product-article">Артикул: 88888</p>
+            <p class="product-price">1990 руб.</p>
         </div>
 
         <!-- Товар 3 в секции "Смотрите также" -->
         <div class="catalog-item">
-            <a href="product7.html" class="product-link">
-                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
-                <h3>Конусы тренировочные</h3>
+            <a href="product10.html" class="product-link">
+                <img src="Zenit-Hoodie 1.jpg" alt="Инвентарь" class="product-img">
+                <h3>Худи Zenit&PlayersClub</h3>
             </a>
-            <p class="product-article">Артикул: 11223</p>
-            <p class="product-price">2000 руб.</p>
+            <p class="product-article">Артикул: 73582</p>
+            <p class="product-price">12990 руб.</p>
         </div>
     </div>
 </div>
