--- a/About us.html
+++ b/About us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
+    <title>О нас</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
@@ -17,7 +17,9 @@
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
-                    <button class="contact-button">Контакты</button>
+                    <a href="Contacts.html">
+                        <button class="contact-button">Контакты</button>
+                    </a>
                     <button class="promo-button">Промокоды</button>
                 </div>
             </div>
@@ -62,7 +64,9 @@
         <div class="map-button-container">
             <div class="map-content">
                 <img src="place.png" alt="Местоположение" class="location-icon">
+                <a href="Contacts.html">
                 <button class="map-button">Где нас найти?</button>
+                </a>
             </div>
         </div>
         <div class="footer-logo">
