--- a/Promocodes.html
+++ b/Promocodes.html
@@ -17,7 +17,9 @@
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
-                    <button class="contact-button">Контакты</button>
+                    <a href="Contacts.html">
+                        <button class="contact-button">Контакты</button>
+                    </a>
                     <button class="promo-button">Промокоды</button>
                 </div>
             </div>
