--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
-                    <button class="contact-button">Контакты</button>
+                    <a href="Contacts.html">
+                        <button class="contact-button">Контакты</button>
+                    </a>
                     <button class="promo-button">Промокоды</button>
                 </div>
             </div>
@@ -53,7 +55,7 @@
 
 <!-- Продукт 3 -->
 
-            <a href="product3.html" class="product-item">
+            <a href="product12.html" class="product-item">
             <img src="Players Club T-short.png" alt="Футболка мужская Players Club">
             <h3>Футболка мужская "Players Club"</h3>
             <p>3 990₽</p>
@@ -61,7 +63,7 @@
 
 <!-- Продукт 4 -->
 
-            <a href="product4.html" class="product-item">
+            <a href="product10.html" class="product-item">
                 <img src="Zenit-Hoodie 2.jpg" alt="Худи Zenit&PlayersClub">
                 <h3>Худи Zenit&PlayersClub</h3>
                 <p>43 990₽</p>
@@ -70,17 +72,17 @@
 <!-- Продукт 5 -->
 
             <a href="product5.html" class="product-item">
-                <img src="Инвентарь.jpg" alt="Инвентарь для разминки и спецбеговых упражнений">
-                <h3>Инвентарь для разминки и спецбеговых упражнений</h3>
-                <p>22 990₽</p>
+                <img src="Манижки.png" alt="Манишка двусторонняя синяя-зелёная">
+                <h3>Манишка двусторонняя синяя-зелёная</h3>
+                <p>990₽</p>
             </a>
 
 <!-- Продукт 6 -->
 
             <a href="product6.html" class="product-item">
-                <img src="Suit 1.png" alt="Форма под заказ">
-                <h3>Форма под заказ</h3>
-                <p>3 990₽</p>
+                <img src="gaiters.png" alt="Гетры спортивные JOGEL чёрные">
+                <h3>Гетры спортивные JOGEL чёрные</h3>
+                <p>590₽</p>
             </a>
         </section>
     </main>
