--- a/Contacts.html
+++ b/Contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О Нас</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
@@ -24,8 +24,8 @@
         </div>
         <nav>
             <a href="catalog.html" class="nav-button">Каталог</a>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="About us.html" class="nav-button">О Нас</a>
+            <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
 
@@ -58,7 +58,9 @@
             </div>
         </div>
         <div class="footer-logo">
+            <a href="index.html">
             <img src="logo.png" alt="Player Shop Logo">
+            </a>
         </div>
         <div class="contact">
             <h3>Связь с нами:</h3>
