--- a/Promotions.html
+++ b/Promotions.html
@@ -13,7 +13,9 @@
             <div class="top-bar">
                 <div class="left-group">
                     <input type="text" placeholder="Search" class="search-input">
+                    <a href="reglogform.html">
                     <button class="auth-button">Регистрация/ Вход</button>
+                    </a>
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
@@ -40,27 +42,27 @@
                 <a href="product1.html" class="product-link">
                     <img src="Zenit-Hoodie 1.jpg" alt="Zenit-Hoodie" class="product-image">
                     <h2>Zenit-Hoodie</h2>
-                    <button class="price-btn">Цена: 1000 руб.</button>
+                    <button class="price-btn">Цена: 10990 руб.</button>
                 </a>
-                <p>Артикул: 123456</p>
+                <p>Артикул: 73582</p>
             </div>
 
             <div class="black-friday-product">
                 <a href="product2.html" class="product-link">
                     <img src="Players Club T-short.png" alt="Players Club T-shirt" class="product-image">
                     <h2>Players Club T-shirt</h2>
-                    <button class="price-btn">Цена: 1200 руб.</button>
+                    <button class="price-btn">Цена: 2490 руб.</button>
                 </a>
-                <p>Артикул: 789101</p>
+                <p>Артикул: 52525</p>
             </div>
 
             <div class="black-friday-product">
                 <a href="product3.html" class="product-link">
-                    <img src="Longsliv.png" alt="Лонгслив PlayersClub" class="product-image">
-                    <h2>Лонгслив PlayersClub</h2>
-                    <button class="price-btn">Цена: 1500 руб.</button>
+                    <img src="mizuno1.jpg" alt="Лонгслив PlayersClub" class="product-image">
+                    <h2>Mizuno Morelia Neo Beta Japan FG</h2>
+                    <button class="price-btn">Цена: 15990 руб.</button>
                 </a>
-                <p>Артикул: 112233</p>
+                <p>Артикул: 33333</p>
             </div>
         </div>
     </main>
@@ -76,12 +78,15 @@
             </div>
         </div>
         <div class="footer-logo">
-            <img src="logo.png" alt="Player Shop Logo">
+            <a href="index.html">
+                <img src="logo.png" alt="Player Shop Logo">
+            </a>
         </div>
         <div class="contact">
             <h3>Связь с нами:</h3>
-            <p>+79005874570</p>
-            <p>33hjk.glhf@gmail.com</p>
+            <a href="tel:+79005874570">+7 900 587 45 70</a>
+            <br>
+            <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
             <button class="support-button">Тех.поддержка</button>
         </div>
     </div>
