--- a/reglogform.html
+++ b/reglogform.html
@@ -156,7 +156,9 @@ input[type="submit"]:hover {
                     <a href="Contacts.html">
                         <button class="contact-button">Контакты</button>
                     </a>
-                    <button class="promo-button">Промокоды</button>
+                    <a href="Promocodes.html">
+                        <button class="promo-button">Промокоды</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -226,12 +228,15 @@ input[type="submit"]:hover {
                 </div>
             </div>
             <div class="footer-logo">
-                <img src="logo.png" alt="Player Shop Logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Player Shop Logo">
+                </a>
             </div>
             <div class="contact">
                 <h3>Связь с нами:</h3>
-                <p>+79005874570</p>
-                <p>33hjk.glhf@gmail.com</p>
+                <a href="tel:+79005874570">+7 900 587 45 70</a>
+                <br>
+                <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
                 <button class="support-button">Тех.поддержка</button>
             </div>
         </div>
