--- a/try.html
+++ b/try.html
@@ -13,14 +13,18 @@
             <div class="top-bar">
                 <div class="left-group">
                     <input type="text" placeholder="Search" class="search-input">
-                    <button class="auth-button">Регистрация/ Вход</button>
+                    <a href="reglogform.html">
+                        <button class="auth-button">Регистрация/ Вход</button>
+                    </a>
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
                     <a href="Contacts.html">
                     <button class="contact-button">Контакты</button>
                     </a>
-                    <button class="promo-button">Промокоды</button>
+                    <a href="Promocodes.html">
+                        <button class="promo-button">Промокоды</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -159,12 +163,17 @@
                 </div>
             </div>
             <div class="footer-logo">
-                <img src="logo.png" alt="Player Shop Logo">
+                <a href="index.html">
+                    <a href="index.html">
+                        <img src="logo.png" alt="Player Shop Logo">
+                    </a>
+                </a>
             </div>
             <div class="contact">
                 <h3>Связь с нами:</h3>
-                <p>+79005874570</p>
-                <p>33hjk.glhf@gmail.com</p>
+                <a href="tel:+79005874570">+7 900 587 45 70</a>
+                <br>
+                <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
                 <button class="support-button">Тех.поддержка</button>
             </div>
         </div>
