--- a/About us.html
+++ b/About us.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О нас</title>
+    <title>Mizuno Morelia Neo Beta Japan FG</title>
     <link rel="stylesheet" href="style52.css">
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
     <header>
@@ -25,15 +26,15 @@
                     <a href="Promocodes.html">
                         <button class="promo-button">Промокоды</button>
                     </a>
+                </div>
             </div>
         </div>
         <nav>
             <a href="catalog.html" class="nav-button">Каталог</a>
-            <a href="index.html" class="nav-button">Главная</a>
+            <a href="About us.html" class="nav-button">О Нас</a>
             <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
-
    <!-- Основное содержимое страницы -->
    <main style="background-color: hotpink; padding: 20px;">
     <h1 style="text-align: center; font-size: 2rem; margin-bottom: 10px;">Players Shop</h1>
