--- a/Promotions.html
+++ b/Promotions.html
@@ -87,7 +87,7 @@
             <a href="tel:+79005874570">+7 900 587 45 70</a>
             <br>
             <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
-            <button class="support-button">Тех.поддержка</button>
+            <button class="support-button">Обратная Связь</button>
         </div>
     </div>
     <div class="footer-copyright">
