--- a/About us.html
+++ b/About us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mizuno Morelia Neo Beta Japan FG</title>
+    <title>О нас</title>
     <link rel="stylesheet" href="style52.css">
     <link rel="stylesheet" href="products.css">
 </head>
@@ -83,7 +83,9 @@
             <a href="tel:+79005874570">+7 900 587 45 70</a>
             <br>
             <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
-            <button class="support-button">Обратная Связь</button>
+            <a href="feedback.html">
+                <button class="support-button">Обратная Связь</button>
+              </a>              
         </div>
     </div>
     <div class="footer-copyright">
