--- a/product9.html
+++ b/product9.html
@@ -120,7 +120,9 @@
             <a href="tel:+79005874570">+7 900 587 45 70</a>
             <br>
             <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
-            <button class="support-button">Обратная Связь</button>
+            <a href="feedback.html">
+                <button class="support-button">Обратная Связь</button>
+              </a> 
         </div>
     </div>
     <div class="footer-copyright">
