--- a/reglogform.html
+++ b/reglogform.html
@@ -237,7 +237,9 @@ input[type="submit"]:hover {
                 <a href="tel:+79005874570">+7 900 587 45 70</a>
                 <br>
                 <a href="mailto:33hjk.glhf@gmail.com">33hjk.glhf@gmail.com</a>
-                <button class="support-button">Обратная Связь</button>
+                <a href="feedback.html">
+                    <button class="support-button">Обратная Связь</button>
+                  </a> 
             </div>
         </div>
         <div class="footer-copyright">
