--- a/Promocodes.html
+++ b/Promocodes.html
@@ -27,9 +27,9 @@
             </div>
         </div>
         <nav>
-            <button class="nav-button">Каталог</button>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="catalog.html" class="nav-button">Каталог</a>
+            <a href="About us.html" class="nav-button">О Нас</a>
+            <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
 <main>
@@ -41,7 +41,9 @@
         <div class="map-button-container">
             <div class="map-content">
                 <img src="place.png" alt="Местоположение" class="location-icon">
-                <button class="map-button">Где нас найти?</button>
+                <a href="Contacts.html">
+                    <button class="map-button">Где нас найти?</button>
+                </a>
             </div>
         </div>
         <div class="footer-logo">
