--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <a href="product2.html" class="product-item">
             <img src="pumki1.png" alt="Бутсы Ultra 5 Ultimate MxSG">
-            <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
+            <h3>Бутсы PUMA 5 Ultimate MxSG Football Boots</h3>
             <p>22 990₽</p>
             </a>
 
