--- a/try.html
+++ b/try.html
@@ -52,7 +52,7 @@
     <div class="catalog-item boots">
         <a href="product2.html" class="product-link">
             <img src="pumki2.jpg" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>ULTRA 5 ULTIMATE MxSG Football Boots</h2>
+            <h2>PUMA ULTRA 5 ULTIMATE MxSG Football Boots</h2>
         </a>
         <p class="product-article">Артикул: 22222</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 23990 руб.</p>
@@ -145,7 +145,7 @@
     <div class="catalog-item accessories">
         <a href="product12.html" class="product-link">
             <img src="Players Club T-short.png" alt="Аксессуары" class="product-img accessories">
-            <h2>"Players Club T-short</h2>
+            <h2>"Players Club" T-short</h2>
         </a>
         <p class="product-article">Артикул: 52525</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 3990 руб.</p>
