--- a/Promocodes.html
+++ b/Promocodes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Футбокла мужская "Players Club"</title>
+    <title>Промокоды</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
@@ -32,9 +32,35 @@
             <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
-<main>
 
-</main>
+    <main>
+        <section class="promo-section">
+            <h1>Активные промокоды</h1>
+            
+            <div class="promo-container">
+                <div class="promo-card">
+                    <h2>WELCOME2024</h2>
+                    <p class="discount">Скидка 10%</p>
+                    <p class="description">На первый заказ для новых клиентов</p>
+                    <button class="copy-button">Скопировать код</button>
+                </div>
+
+                <div class="promo-card">
+                    <h2>PLAYER50</h2>
+                    <p class="discount">Скидка 50%</p>
+                    <p class="description">На вторую пару бутс</p>
+                    <button class="copy-button">Скопировать код</button>
+                </div>
+
+                <div class="promo-card">
+                    <h2>SUMMER30</h2>
+                    <p class="discount">Скидка 30%</p>
+                    <p class="description">На летнюю коллекцию</p>
+                    <button class="copy-button">Скопировать код</button>
+                </div>
+            </div>
+        </section>
+    </main>
 <!-- Footer -->
 <footer>
     <div class="footer-content">
